refactoring: :recycle: adjusted the way the data stream and HTTP connection were configured.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.3",
